# vs_ws

./: .gitignore  README.md
src/moveit_tutorials/: CMakeLists.txt  package.xml
src/moveit_tutorials/jikken/: 0104jikken.txt  0105jikken.txt  0105jikken_2.txt  0105jikken_3.txt  joint_values.txt  rsme_result.txt
src/moveit_tutorials/jikken/rsme/: 01061337servo_result.txt  01061345servo_result.txt  01061408servo_result.txt  01061726servo_result.txt  01061735servo_result.txt  01062129servo_result.txt  01062231servo_result.txt  01071706servo_result.txt  01071716rsme_result.txt  01071718rsme_result.txt
src/moveit_tutorials/launch/: make_dataset.launch
src/moveit_tutorials/realsense_rqt_reconfigure_settings/: visualservoing_0112  vs_rs_setups
src/moveit_tutorials/scripts_demo_fork/: avs_witdraw_up.py  demo_init_image.py  demo_joint_states_server_fork.py  demo_motion.py  demo_shoki.py  demo_vel_servo_forkpos.py  main_demo.py  practice_main_demo.py  ros_init_set.py  withdraw_down_drawer.py  withdraw_mid_drawer.py  withdraw_top_drawer.py
src/moveit_tutorials/scripts_demo_fork/mokuhyo_and_capture/: demo_desired_image.py  demo_mokuhyo.py
src/moveit_tutorials/scripts_demo_fork/motion_python/: demo_data.py  demo_init_pose_withdraw.py  demo_motion.py  demo_vel_servo_forkpos.py  withdraw_down_drawer.py  withdraw_mid_drawer.py  withdraw_top_drawer.py
src/moveit_tutorials/scripts_demo_fork/other_pythonfile/: demo_error_img_withdraw.py  demo_error_video.py  demo_jacobian_pickle.py  demo_people_robot.py  demo_rmse_ave_fork.py
src/moveit_tutorials/scripts_fork/: 2_value.py  README.md  desired_pose_server.py  dsr_pose_fork.py  error_img.py  fixed_motion_and_capture.py  gazebo_motion_manager.py  gazebo_random_pose_planner_server.py  get_joint_state_server.py  hist.py  ikfast_test.py  image_capture_server.py  input.py  inverse_kinematics_for_remake_jaccobi.py  jacobi_cal.py  jacobian_pickle.py  jikken_data.py  jikken_desired_image.py  jikken_init_image.py  jikken_last_image.py  main_jikken.py  mokuhyo.py  pose_state_server.py  practice.py  random_pose_server.py  rmse_ave_fork.py  shoki.py  shoki2.py  tfpose_server_fork.py  vel_servo_definet_fork.py  vel_servo_definet_fork_theta.py  vel_servo_fork.py  vel_servo_forkpos.py  vel_servo_forkpos_moveit.py  vel_servo_forkpos_moveit_input.py  vel_servo_forkpos_moveit_withdraw.py  withdraw.py
src/moveit_tutorials/scripts_fork/definet/: .gitignore  backbone.py  defnet.py  image_withlabel.py  mk_data.py  pr.py  pytorch_definet.py  pytorch_definet_trainer.py  (+8 more)
src/moveit_tutorials/srv/: GetCurrentCount.srv  GetCurrentImage.srv  GetCurrentImageData.srv  GetCurrentJointVel.srv  GettfPose.srv
(+808 files in other folders)
